<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        app:srcCompat="@mipmap/icontrek" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="#9A000000"
            android:orientation="vertical"
            android:paddingLeft="20sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="1"
                    android:layout_weight="640"
                    android:paddingLeft="5sp"
                    android:paddingTop="5sp"
                    android:text="@string/txt_Title"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="82dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:srcCompat="@mipmap/ic_launcher" />
            </LinearLayout>

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:paddingLeft="5sp"
                android:paddingBottom="5sp"
                android:text="TextView"
                android:textColor="#FFFFFF"
                android:textSize="8sp"
                tools:text="@string/txt_ubicacion" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:paddingLeft="5sp"
                android:paddingTop="5sp"
                android:text="@string/txt_distancia"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                tools:text="@string/txt_kilometraje" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:paddingLeft="5sp"
                android:paddingBottom="5sp"
                android:text="@string/txt_distancia"
                android:textColor="#FFFFFF"
                android:textSize="8sp"
                tools:text="@string/txt_distancia" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:paddingLeft="5sp"
                android:paddingTop="5sp"
                android:text="TextView"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                tools:text="@string/txt_modalidad" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="4"
                android:paddingLeft="5sp"
                android:paddingBottom="5sp"
                android:text="@string/txt_Dificultad"
                android:textColor="#FFFFFF"
                android:textSize="8sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="1"
                android:paddingLeft="5sp"
                android:paddingTop="5sp"
                android:text="@string/txt_valoracion"
                android:textColor="#FFFFFF"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</FrameLayout>
