<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF9800"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/imgv_fondo"
                    android:layout_width="match_parent"
                    android:layout_height="175dp"
                    app:srcCompat="@mipmap/icontrek" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:orientation="vertical"></LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:background="#9A000000"
                        android:orientation="vertical"
                        android:paddingLeft="20sp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/tv_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_span="1"
                                android:layout_weight="640"
                                android:paddingLeft="5sp"
                                android:paddingTop="5sp"
                                android:text="@string/txt_Title"
                                android:textColor="#FFFFFF"
                                android:textSize="20sp" />

                            <ImageView
                                android:id="@+id/imgv_logo"
                                android:layout_width="82dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                app:srcCompat="@mipmap/ic_launcher" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/tv_ubicacion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_span="2"
                            android:paddingLeft="5sp"
                            android:paddingBottom="5sp"
                            android:text="TextView"
                            android:textColor="#FFFFFF"
                            android:textSize="8sp"
                            tools:text="@string/txt_ubicacion" />

                        <TextView
                            android:id="@+id/tv_kilometraje"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_span="2"
                            android:paddingLeft="5sp"
                            android:paddingTop="5sp"
                            android:text="@string/txt_distancia"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp"
                            tools:text="@string/txt_kilometraje" />

                        <TextView
                            android:id="@+id/tv_distancia"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_span="2"
                            android:paddingLeft="5sp"
                            android:paddingBottom="5sp"
                            android:text="@string/txt_distancia"
                            android:textColor="#FFFFFF"
                            android:textSize="8sp"
                            tools:text="@string/txt_distancia" />

                        <TextView
                            android:id="@+id/tv_modalidad"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_span="2"
                            android:paddingLeft="5sp"
                            android:paddingTop="5sp"
                            android:text="TextView"
                            android:textColor="#FFFFFF"
                            android:textSize="20sp"
                            tools:text="@string/txt_modalidad" />

                        <TextView
                            android:id="@+id/tv_dificultad"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_span="4"
                            android:paddingLeft="5sp"
                            android:paddingBottom="5sp"
                            android:text="@string/txt_Dificultad"
                            android:textColor="#FFFFFF"
                            android:textSize="8sp" />

                        <TextView
                            android:id="@+id/tv_valoracion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_span="1"
                            android:paddingLeft="5sp"
                            android:paddingTop="5sp"
                            android:text="@string/txt_valoracion"
                            android:textColor="#FFFFFF"
                            android:textSize="15sp" />
                    </LinearLayout>
                </LinearLayout>

            </FrameLayout>

        </LinearLayout>
    </ScrollView>

    <ListView
        android:id="@+id/lv_listaRutas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="@+id/scrollView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="@+id/scrollView2" />

</android.support.constraint.ConstraintLayout>